# SoC_Brain

./: .gitignore  FPGA_Processing.v  README.md  SoC_Brain.qsf  SoC_Brain.qws  SoC_Brain_assignment_defaults.qdf
db/: SoC_Brain.(0).cnf.cdb  SoC_Brain.(0).cnf.hdb  SoC_Brain.(1).cnf.cdb  SoC_Brain.(1).cnf.hdb  SoC_Brain.(10).cnf.cdb  SoC_Brain.(10).cnf.hdb  SoC_Brain.(11).cnf.cdb  SoC_Brain.(11).cnf.hdb  SoC_Brain.(12).cnf.cdb  SoC_Brain.(12).cnf.hdb  SoC_Brain.(13).cnf.cdb  SoC_Brain.(13).cnf.hdb  SoC_Brain.(14).cnf.cdb  SoC_Brain.(14).cnf.hdb  SoC_Brain.(15).cnf.cdb  SoC_Brain.(15).cnf.hdb  SoC_Brain.(16).cnf.cdb  SoC_Brain.(16).cnf.hdb  SoC_Brain.(17).cnf.cdb  SoC_Brain.(17).cnf.hdb  SoC_Brain.(18).cnf.cdb  SoC_Brain.(18).cnf.hdb  SoC_Brain.(19).cnf.cdb  SoC_Brain.(19).cnf.hdb  SoC_Brain.(2).cnf.cdb  SoC_Brain.(2).cnf.hdb  SoC_Brain.(20).cnf.cdb  SoC_Brain.(20).cnf.hdb  SoC_Brain.(21).cnf.cdb  SoC_Brain.(21).cnf.hdb  SoC_Brain.(22).cnf.cdb  SoC_Brain.(22).cnf.hdb  SoC_Brain.(23).cnf.cdb  SoC_Brain.(23).cnf.hdb  SoC_Brain.(24).cnf.cdb  SoC_Brain.(24).cnf.hdb  SoC_Brain.(25).cnf.cdb  SoC_Brain.(25).cnf.hdb  SoC_Brain.(26).cnf.cdb  (+171 more)
robot-app/app/: CMakeLists.txt  Makefile  huro.c  huro.h  main.c
robot-app/app/mission/: DEFAULT.c  DEFAULT.h  MISSION_0_READY_PLAY.c  MISSION_0_READY_PLAY.h  MISSION_10_BLUE_GATE.c  MISSION_10_BLUE_GATE.h  MISSION_1_YELLOW_BARRICADE.c  MISSION_1_YELLOW_BARRICADE.h  MISSION_2_RED_BRIDGE.c  MISSION_2_RED_BRIDGE.h  MISSION_3_AVOID_BOMB.c  MISSION_3_AVOID_BOMB.h  MISSION_4_JUMP_HURDLE.c  MISSION_4_JUMP_HURDLE.h  MISSION_5_GREEN_BRIDGE.c  MISSION_5_GREEN_BRIDGE.h  MISSION_6_KICK_BALL.c  MISSION_6_KICK_BALL.h  MISSION_7_YELLOW_HOLE_BRIDGE.c  MISSION_7_YELLOW_HOLE_BRIDGE.h  MISSION_8_AVOID_BOMB.c  MISSION_8_AVOID_BOMB.h  MISSION_8_CREVASSE.c  MISSION_8_CREVASSE.h  MISSION_9_LAST_BARRICADE.c  MISSION_9_LAST_BARRICADE.h
(+1251 files in other folders)
